# themis

./: .gitignore  LICENSE  README.md  pyproject.toml
__handlers__/libc_2.31.so/: fgets_unlocked.js
tests/: test_themis.py
themis/: config.toml  legit_comparator.py  main.py  statistics.py
themis/common/: config.py
themis/comparing/: comparator.py  compare.py  database.py  error.py  ged.py  ged_match.py
themis/data/: libcalls_Abafar_Client_filtered.txt  libcalls_Akiva_Client_2_filtered.txt  libcalls_Akiva_Client_filtered.txt  libcalls_Atollon_Client_2_filtered.txt  libcalls_Bespin_Client_filtered.txt  libcalls_Borleais_Client_filtered.txt  libcalls_Chandrila_Client_filtered.txt  libcalls_Crait_Client_filtered.txt  libcalls_Endor_Client_5_filtered.txt  libcalls_Endor_Client_filtered.txt  libcalls_Kessel_Client_2_filtered.txt  libcalls_Kessel_Client_filtered.txt  libcalls_Mimban_Client_2_filtered.txt  libcalls_Mimban_client_3_filtered.txt  libcalls_Onderon_Client_2_filtered.txt  libcalls_PolisMassa_Client_2_filtered.txt  libcalls_PolisMassa_Client_3_filtered.txt  libcalls_PolisMassa_Client_filtered.txt  libcalls_dbclient_filtered.txt  libcalls_ssh-6.0_filtered.txt  libcalls_ssh-6.1_filtered.txt  libcalls_ssh-6.2_filtered.txt  libcalls_ssh-6.3_filtered.txt  libcalls_ssh-6.4_filtered.txt  libcalls_ssh-6.5_filtered.txt  libcalls_ssh-6.6p1_filtered.txt  libcalls_ssh-6.7p1_filtered.txt  libcalls_ssh-6.8_filtered.txt  libcalls_ssh-6.9_filtered.txt  libcalls_ssh-7.0_filtered.txt  libcalls_ssh-7.1p1_filtered.txt  libcalls_ssh-7.2p1_filtered.txt  libcalls_ssh-7.2p2_filtered.txt  libcalls_ssh-7.3_filtered.txt  libcalls_ssh-7.4_filtered.txt  libcalls_ssh-7.5_filtered.txt  libcalls_ssh-7.6_filtered.txt  libcalls_ssh-7.7_filtered.txt  libcalls_ssh-7.8_filtered.txt  libcalls_ssh-7.9_filtered.txt  (+21 more)
themis/graphs/: ssh-7.9_graph.pickle  ssh-8.0_graph.pickle  ssh-8.1_graph.pickle  ssh-8.2_graph.pickle  ssh-8.3_graph.pickle  ssh-8.4_graph.pickle  ssh-8.5_graph.pickle  ssh-8.6_graph.pickle  ssh-8.7_graph.pickle  ssh-8.8_graph.pickle
themis/modules/collecting/: collector.py
themis/modules/common/: calls.py  config.py  errors.py
themis/modules/comparing/: branch_comparator.py  difference_graph.py  error.py  graph_comparator.py  primitives.py
themis/modules/searching/: indexing.py
themis/results/: Atollon_Client_2_vs_ssh-7.9.json  Bespin_Client_vs_ssh-centos7.json  ssh-8.2_vs_ssh-8.3.json
themis/searching/: indexing.py
themis/trace_conf/: libc_i_o.txt
themis/tracing/: frida_trace_wrap.py  tracer.py
themis/transforming/: calls.py  gexf.py  grapher.py  parser.py  transform.py
(+7 files in other folders)
