[tool.poetry]
name = "themis"
version = "0.1.0"
description = ""
authors = ["Ádám Ruman <ruman.adam@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.7.1, < 3.11"
networkx = "^2.6.3"
matplotlib = "^3.5.0"
frida = "^15.1.12"
frida-tools = "^10.4.1"
pyserde = "^0.5.3"
toml = "^0.10.2"
Deprecated = "^1.2.13"
scipy = "^1.7.3"
pandas = "^1.3.5"
cython = "^0.29.26"
numpy = "^1.21.5"
gmatch4py = { git = "https://github.com/Jacobe2169/GMatch4py.git", branch = "master"}
vptree = "^1.2"
# munkres = { git = "https://github.com/jfrelinger/cython-munkres-wrapper.git", branch = "master"}
 # poetry cant build this ATM, the solution is a pending pull request
ortools = "^9.3.10459"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
