[tool.poetry]
name = "themis"
version = "0.1.0"
description = "Themis is a suite of PoC tools aiming to help the analysis of trojanized programs."
authors = ["Ádám Ruman <ruman.adam@gmail.com> <469068@muni.cz>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
networkx = "^2.6.3"
matplotlib = "^3.5.0"
frida = "^15.1.12"
frida-tools = "^10.4.1"
pyserde = "^0.5.3"
toml = "^0.10.2"
Deprecated = "^1.2.13"
scipy = "^1.7.3"
cython = "^0.29.26"
numpy = "^1.21.5"
gmatch4py = { git = "https://github.com/Jacobe2169/GMatch4py.git", branch = "master"}
vptree = "^1.2"
# munkres = { git = "https://github.com/jfrelinger/cython-munkres-wrapper.git", branch = "master"}
 # poetry cant build this ATM, the solution is a pending pull request to poetry
ortools = "^9.3.10459"
pylddwrap = "^1.2.1"
colorama = "^0.4.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
